# DynamicCBOM

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  GITHUB_ACTIONS_SETUP.md  INDEX.md  MANIFEST.in  PUBLISHING.md  PYPI_CHECKLIST.md  PYPI_SETUP_SUMMARY.md  QUICKSTART_PYPI.md  README.md  README_GENERATION_SUMMARY.md  README_OLD.md  build_and_publish.py  java.txt  openssl.txt  package-lock.json  packages.txt  probelist.txt  pyproject.toml  setup.cfg  static_example  symbol.txt
.github/workflows/: publish.yml  test.yml
Meetings/: 2025.10.21.md  2025.11.04.md  2025.11.19.md
docs/: cbom.json  interface.html  logo.txt  neoBanner.txt  search.js
docs/interface/: bpftraceWrapper.html  chartGenerator.html  client.html  config.html  dependencyInstaller.html  logPostProcessor.html  options.html  postParser.html
docs/interface/options/: attachByPid.html  runNewTarget.html  runPythonTest.html
docs/pdocs/: index.html
docs/pdocs/interface/: cbomMatcher.html  client.html
docs/pdocs/interface/options/: globalTrace.html  runNewTarget.html
interface/: __init__.py  bpftraceWrapper.py  cbomMatcher.py  cbom_rules.yaml  chartGenerator.py  client.py  config.py  dependencyInstaller.py  logPostProcessor.py
interface/options/: __init__.py  runNewTarget.py  runPythonTest.py
interface/utils/: singleton.py
probes/: makefile  signature.bt  symmetric.bt
src/: .gitignore  pyproject.toml
src/Meetings/: 2025.10.08.md
src/interface/: __init__.py  bpftraceWrapper.py  cbomMatcher.py  chartGenerator.py  client.py  config.py  dependencyInstaller.py  logPostProcessor.py  settings.toml
src/interface/options/: __init__.py  attachByPid.py  globalTrace.py  runNewTarget.py  runPythonTest.py
src/interface/utils/: __init__.py  singleton.py
src/probes/: algorithms.bt  asymmetric.bt  tls.bt
src/testPrograms/: openssl_all
src/tests/: testC++.sh  testall.sh
src/tests/ground_truth/: crypto_all_cbom_gt.json  hashing_cbom_gt.json  openssl_all_cbom_gt.json
src/tests/ibm_cbomkit/: hashing_cbom_ibm.json  symmetric_cbom_ibm.json
testPrograms/: crypto_all.js  openssl_all.cpp
tests/: testNginx.sh  testNode.sh
tests/ground_truth/: asymmetric_cbom_gt.json  symmetric_cbom_gt.json
tests/ibm_cbomkit/: asymmetric_cbom_ibm.json
